trlte-common: denoise in Snap by default
Change-Id: I633bc008ee790391821eaa7bcd6f9acdc1fb6e2d
Signed-off-by: ZION959 <ziontran@gmail.com>

--- a/overlay/packages/apps/Snap/res/values/config.xml
+++ b/overlay/packages/apps/Snap/res/values/config.xml
@@ -26,4 +26,8 @@
 
     <!-- Opens front camera using openLegacy() -->
     <bool name="front_camera_open_legacy">false</bool>
+
+    <!-- QC-denoise -->
+    <string name="pref_camera_denoise_default" translatable="false">denoise-on</string>
+
 </resources>
