--- a/overlay/packages/apps/Snap/res/values/config.xml
+++ b/overlay/packages/apps/Snap/res/values/config.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Copyright (C) 2012 The Android Open Source Project
-                   2015-2016 The CyanogenMod Project
+                   2015 The CyanogenMod Project
+
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
+
           http://www.apache.org/licenses/LICENSE-2.0
+
      Unless required by applicable law or agreed to in writing, software
      distributed under the License is distributed on an "AS IS" BASIS,
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -15,11 +18,16 @@
 <!-- Camera app resources that may need to be customized
      for different hardware or product builds. -->
 <resources>
-    <!-- Restart preview for back camera onPictureTaken -->
-    <bool name="back_camera_restart_preview_onPictureTaken">true</bool>
+    <!-- Maximum recording length in milliseconds. 0 means unlimited. -->
+    <integer name="max_video_recording_length">0</integer>
 
-    <!-- Restart preview for front camera onPictureTaken -->
-    <bool name="front_camera_restart_preview_onPictureTaken">true</bool>
+    <!-- This value may be tweaked to save memory on low RAM devices. The value
+         is the percentage of camera preview height/width to scale to. -->
+    <integer name="panorama_frame_size_reduction">90</integer>
+
+    <!-- This value may be changed to true to enable the warped pano preview overlayed on top
+         of the fullscreen pano preview. -->
+    <bool name="enable_warped_pano_preview">true</bool>
 
     <!-- Opens back camera using openLegacy() -->
     <bool name="back_camera_open_legacy">false</bool>
@@ -30,4 +38,34 @@
     <!-- QC-denoise -->
     <string name="pref_camera_denoise_default" translatable="false">denoise-on</string>
 
+    <!-- Restart preview for back camera onPictureTaken -->
+    <bool name="back_camera_restart_preview_onPictureTaken">true</bool>
+
+    <!-- Restart preview for front camera onPictureTaken -->
+    <bool name="front_camera_restart_preview_onPictureTaken">true</bool>
+
+    <!-- Force use a specific preview-size
+         Example: 1920x1080 -->
+    <string name="preview_size_for_photo"></string>
+
+    <!-- Set's manufacturer specific parameters on startup.
+         Example: lge-camera=1;cam-mode=0 -->
+    <string name="manufacturer_key_values"></string>
+
+    <!-- Use following iso parameter.
+         Example: lg-iso
+                  lg-iso-values -->
+    <string name="key_iso">iso</string>
+    <string name="key_iso_values">iso-values</string>
+
+    <!-- ISO values use numbers.
+         Example: 50 instead of ISO50 -->
+    <bool name="iso_values_use_numbers">true</bool>
+
+    <!-- Enable support for LGE HDR -->
+    <bool name="lge_hdr_mode">false</bool>
+
+    <!-- Enable NV12 for both video and photo preview if preview size doesn't
+         change while switching from one to the other -->
+    <bool name="cpp_duplication">true</bool>
 </resources>
